--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -4,11 +4,16 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
+    "preinstall": "pnpm dlx only-allow pnpm",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@fontsource/public-sans": "^4.5.12",
+    "@mui/joy": "5.0.0-alpha.63",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
